--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -553,7 +553,7 @@
         (change) Log: Added redlink logging statements.
       </li>
       <li>
-        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script">Options/Config_script</a>.
+        (change) Options: Added <a href="http://xowa.org/home/wiki/Options/Config_script.html" id="xolnki_11" title="Options/Config script" class="xowa-visited">Options/Config_script</a>.
       </li>
       <li>
         (change) Scribunto: Gsub was not handling lua callback functions correctly; EX:[[Minnesota]] [[nice]] and regx of %[%[([^#|%]]-)%]%]. See: <a href="http://en.wiktionary.org/wiki/Minnesota_nice" rel="nofollow" class="external free">http://en.wiktionary.org/wiki/Minnesota_nice</a>
