--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,6 +82,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
+      v3.6.3.2 features the following:
+    </p>
+    <ul>
+      <li>
+        (PC &amp; Android) Fix Download Central not resuming after app is restarted
+      </li>
+    </ul>
+    <p>
       v3.6.3.1 features the following:
     </p>
     <ul>
