--- a/home/wiki/Change_log.html
+++ b/home/wiki/Change_log.html
@@ -36,142 +36,150 @@
           </ul>
         </li>
         <li class="toclevel-1 tocsection-4">
-          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">2</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
+          <a href="#v3.6.3.2_.282016-06-20.29"><span class="tocnumber">2</span> <span class="toctext">v3.6.3.2 (2016-06-20)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-6">
-              <a href="#PC"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-7">
-              <a href="#Android"><span class="tocnumber">2.3</span> <span class="toctext">Android</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-8">
-              <a href="#Server"><span class="tocnumber">2.4</span> <span class="toctext">Server</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-9">
-              <a href="#Doc"><span class="tocnumber">2.5</span> <span class="toctext">Doc</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-10">
-              <a href="#Dev"><span class="tocnumber">2.6</span> <span class="toctext">Dev</span></a>
+              <a href="#PC"><span class="tocnumber">2.1</span> <span class="toctext">PC</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-11">
-          <a href="#v3.5.1.1_.282016-05-01.29"><span class="tocnumber">3</span> <span class="toctext">v3.5.1.1 (2016-05-01)</span></a> 
+        <li class="toclevel-1 tocsection-6">
+          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">3</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Wiki"><span class="tocnumber">3.1</span> <span class="toctext">Wiki</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#PC_2"><span class="tocnumber">3.2</span> <span class="toctext">PC</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-9">
+              <a href="#Android"><span class="tocnumber">3.3</span> <span class="toctext">Android</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-10">
+              <a href="#Server"><span class="tocnumber">3.4</span> <span class="toctext">Server</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-11">
+              <a href="#Doc"><span class="tocnumber">3.5</span> <span class="toctext">Doc</span></a>
+            </li>
             <li class="toclevel-2 tocsection-12">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X"><span class="tocnumber">3.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+              <a href="#Dev"><span class="tocnumber">3.6</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-13">
-          <a href="#v3.4.4.1_.282016-04-24.29"><span class="tocnumber">4</span> <span class="toctext">v3.4.4.1 (2016-04-24)</span></a> 
+          <a href="#v3.5.1.1_.282016-05-01.29"><span class="tocnumber">4</span> <span class="toctext">v3.5.1.1 (2016-05-01)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-14">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_2"><span class="tocnumber">4.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-15">
-              <a href="#Android_2"><span class="tocnumber">4.2</span> <span class="toctext">Android</span></a>
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X"><span class="tocnumber">4.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-16">
-          <a href="#v3.4.3.1_.282016-04-17.29"><span class="tocnumber">5</span> <span class="toctext">v3.4.3.1 (2016-04-17)</span></a> 
+        <li class="toclevel-1 tocsection-15">
+          <a href="#v3.4.4.1_.282016-04-24.29"><span class="tocnumber">5</span> <span class="toctext">v3.4.4.1 (2016-04-24)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-16">
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_2"><span class="tocnumber">5.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+            </li>
             <li class="toclevel-2 tocsection-17">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_3"><span class="tocnumber">5.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-18">
-              <a href="#Android_3"><span class="tocnumber">5.2</span> <span class="toctext">Android</span></a>
+              <a href="#Android_2"><span class="tocnumber">5.2</span> <span class="toctext">Android</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-19">
-          <a href="#v3.4.2.1_.282016-04-10.29"><span class="tocnumber">6</span> <span class="toctext">v3.4.2.1 (2016-04-10)</span></a> 
+        <li class="toclevel-1 tocsection-18">
+          <a href="#v3.4.3.1_.282016-04-17.29"><span class="tocnumber">6</span> <span class="toctext">v3.4.3.1 (2016-04-17)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-19">
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_3"><span class="tocnumber">6.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+            </li>
             <li class="toclevel-2 tocsection-20">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_4"><span class="tocnumber">6.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-21">
-              <a href="#Android_4"><span class="tocnumber">6.2</span> <span class="toctext">Android</span></a>
+              <a href="#Android_3"><span class="tocnumber">6.2</span> <span class="toctext">Android</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-22">
-          <a href="#v3.4.1.1_.282016-04-04.29"><span class="tocnumber">7</span> <span class="toctext">v3.4.1.1 (2016-04-04)</span></a> 
+        <li class="toclevel-1 tocsection-21">
+          <a href="#v3.4.2.1_.282016-04-10.29"><span class="tocnumber">7</span> <span class="toctext">v3.4.2.1 (2016-04-10)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-22">
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_4"><span class="tocnumber">7.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+            </li>
             <li class="toclevel-2 tocsection-23">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_5"><span class="tocnumber">7.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+              <a href="#Android_4"><span class="tocnumber">7.2</span> <span class="toctext">Android</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-24">
-          <a href="#v3.3.4.1_.282016-03-27.29"><span class="tocnumber">8</span> <span class="toctext">v3.3.4.1 (2016-03-27)</span></a> 
+          <a href="#v3.4.1.1_.282016-04-04.29"><span class="tocnumber">8</span> <span class="toctext">v3.4.1.1 (2016-04-04)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-25">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_6"><span class="tocnumber">8.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-26">
-              <a href="#Android_5"><span class="tocnumber">8.2</span> <span class="toctext">Android</span></a>
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_5"><span class="tocnumber">8.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-27">
-          <a href="#v3.2.1.1_.282016-01-31.29"><span class="tocnumber">9</span> <span class="toctext">v3.2.1.1 (2016-01-31)</span></a> 
+        <li class="toclevel-1 tocsection-26">
+          <a href="#v3.3.4.1_.282016-03-27.29"><span class="tocnumber">9</span> <span class="toctext">v3.3.4.1 (2016-03-27)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-27">
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_6"><span class="tocnumber">9.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+            </li>
             <li class="toclevel-2 tocsection-28">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_7"><span class="tocnumber">9.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+              <a href="#Android_5"><span class="tocnumber">9.2</span> <span class="toctext">Android</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-29">
-          <a href="#v3.1.5.1_.282016-01-31.29"><span class="tocnumber">10</span> <span class="toctext">v3.1.5.1 (2016-01-31)</span></a> 
+          <a href="#v3.2.1.1_.282016-01-31.29"><span class="tocnumber">10</span> <span class="toctext">v3.2.1.1 (2016-01-31)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-30">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_8"><span class="tocnumber">10.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-31">
-              <a href="#Android_6"><span class="tocnumber">10.2</span> <span class="toctext">Android</span></a>
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_7"><span class="tocnumber">10.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-32">
-          <a href="#v3.1.4.2_.282016-01-28.29"><span class="tocnumber">11</span> <span class="toctext">v3.1.4.2 (2016-01-28)</span></a> 
+        <li class="toclevel-1 tocsection-31">
+          <a href="#v3.1.5.1_.282016-01-31.29"><span class="tocnumber">11</span> <span class="toctext">v3.1.5.1 (2016-01-31)</span></a> 
           <ul>
+            <li class="toclevel-2 tocsection-32">
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_8"><span class="tocnumber">11.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+            </li>
             <li class="toclevel-2 tocsection-33">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_9"><span class="tocnumber">11.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+              <a href="#Android_6"><span class="tocnumber">11.2</span> <span class="toctext">Android</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-34">
-          <a href="#v3.1.4.1_.282016-01-24.29"><span class="tocnumber">12</span> <span class="toctext">v3.1.4.1 (2016-01-24)</span></a> 
+          <a href="#v3.1.4.2_.282016-01-28.29"><span class="tocnumber">12</span> <span class="toctext">v3.1.4.2 (2016-01-28)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-35">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_10"><span class="tocnumber">12.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
-            </li>
-            <li class="toclevel-2 tocsection-36">
-              <a href="#Android_7"><span class="tocnumber">12.2</span> <span class="toctext">Android</span></a>
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_9"><span class="tocnumber">12.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-37">
-          <a href="#v3.1.3.1_.282016-01-17.29"><span class="tocnumber">13</span> <span class="toctext">v3.1.3.1 (2016-01-17)</span></a> 
+        <li class="toclevel-1 tocsection-36">
+          <a href="#v3.1.4.1_.282016-01-24.29"><span class="tocnumber">13</span> <span class="toctext">v3.1.4.1 (2016-01-24)</span></a> 
           <ul>
-            <li class="toclevel-2 tocsection-38">
-              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_11"><span class="tocnumber">13.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+            <li class="toclevel-2 tocsection-37">
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_10"><span class="tocnumber">13.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
             </li>
-            <li class="toclevel-2 tocsection-39">
-              <a href="#Android_8"><span class="tocnumber">13.2</span> <span class="toctext">Android</span></a>
+            <li class="toclevel-2 tocsection-38">
+              <a href="#Android_7"><span class="tocnumber">13.2</span> <span class="toctext">Android</span></a>
             </li>
           </ul>
         </li>
-        <li class="toclevel-1 tocsection-40">
-          <a href="#v3.1.1.1_.282016-01-03.29"><span class="tocnumber">14</span> <span class="toctext">v3.1.1.1 (2016-01-03)</span></a>
+        <li class="toclevel-1 tocsection-39">
+          <a href="#v3.1.3.1_.282016-01-17.29"><span class="tocnumber">14</span> <span class="toctext">v3.1.3.1 (2016-01-17)</span></a> 
+          <ul>
+            <li class="toclevel-2 tocsection-40">
+              <a href="#Windows_.2F_Linux_.2F_Mac_OS_X_11"><span class="tocnumber">14.1</span> <span class="toctext">Windows / Linux / Mac OS X</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-41">
+              <a href="#Android_8"><span class="tocnumber">14.2</span> <span class="toctext">Android</span></a>
+            </li>
+          </ul>
         </li>
-        <li class="toclevel-1 tocsection-41">
-          <a href="#Archives"><span class="tocnumber">15</span> <span class="toctext">Archives</span></a>
+        <li class="toclevel-1 tocsection-42">
+          <a href="#v3.1.1.1_.282016-01-03.29"><span class="tocnumber">15</span> <span class="toctext">v3.1.1.1 (2016-01-03)</span></a>
+        </li>
+        <li class="toclevel-1 tocsection-43">
+          <a href="#Archives"><span class="tocnumber">16</span> <span class="toctext">Archives</span></a>
         </li>
       </ul>
     </div>
@@ -228,6 +236,20 @@
       The most important category to review is <b>major</b>. The other categories may be skipped due to lower importance (if they were more important, they would be bumped up to <b>major</b>).
     </p>
     <h2>
+      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29">v3.6.3.2 (2016-06-20)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <p>
+      <b>major.fix</b>
+    </p>
+    <ul>
+      <li>
+        DownloadCentral: Fix Download Central not resuming after app is restarted.
+      </li>
+    </ul>
+    <h2>
       <span class="mw-headline" id="v3.6.3.1_.282016-06-19.29">v3.6.3.1 (2016-06-19)</span>
     </h2>
     <h3>
@@ -254,7 +276,7 @@
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major.add</b>
