--- a/home/wiki/Change_log/v3.6.3.1.html
+++ b/home/wiki/Change_log/v3.6.3.1.html
@@ -25,30 +25,52 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">1</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
+          <a href="#v3.6.3.2_.282016-06-20.29"><span class="tocnumber">1</span> <span class="toctext">v3.6.3.2 (2016-06-20)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
+              <a href="#PC"><span class="tocnumber">1.1</span> <span class="toctext">PC</span></a>
             </li>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
-            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">2</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
+          <ul>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Android"><span class="tocnumber">1.3</span> <span class="toctext">Android</span></a>
+              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Server"><span class="tocnumber">1.4</span> <span class="toctext">Server</span></a>
+              <a href="#PC_2"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-6">
-              <a href="#Doc"><span class="tocnumber">1.5</span> <span class="toctext">Doc</span></a>
+              <a href="#Android"><span class="tocnumber">2.3</span> <span class="toctext">Android</span></a>
             </li>
             <li class="toclevel-2 tocsection-7">
-              <a href="#Dev"><span class="tocnumber">1.6</span> <span class="toctext">Dev</span></a>
+              <a href="#Server"><span class="tocnumber">2.4</span> <span class="toctext">Server</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#Doc"><span class="tocnumber">2.5</span> <span class="toctext">Doc</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-9">
+              <a href="#Dev"><span class="tocnumber">2.6</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
+    <h2>
+      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29">v3.6.3.2 (2016-06-20)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <p>
+      <b>major.fix</b>
+    </p>
+    <ul>
+      <li>
+        DownloadCentral: Fix Download Central not resuming after app is restarted.
+      </li>
+    </ul>
     <h2>
       <span class="mw-headline" id="v3.6.3.1_.282016-06-19.29">v3.6.3.1 (2016-06-19)</span>
     </h2>
@@ -76,7 +98,7 @@
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major.add</b>
