--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -360,9 +360,9 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 1.211 MB
-file count: 184
-oldest file: 2016-06-19 20:43:45
+space used: 143.605 KB
+file count: 40
+oldest file: 2016-06-20 13:19:45
 </textarea>
             </td>
           </tr>
