--- a/home/wiki/Change_log/v3.6.3.1.html
+++ b/home/wiki/Change_log/v3.6.3.1.html
@@ -33,25 +33,33 @@
           </ul>
         </li>
         <li class="toclevel-1 tocsection-3">
-          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">2</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
+          <a href="#v3.6.3.2_.282016-06-20.29_2"><span class="tocnumber">2</span> <span class="toctext">v3.6.3.2 (2016-06-20)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
+              <a href="#PC_2"><span class="tocnumber">2.1</span> <span class="toctext">PC</span></a>
             </li>
-            <li class="toclevel-2 tocsection-5">
-              <a href="#PC_2"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
-            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-5">
+          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">3</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
+          <ul>
             <li class="toclevel-2 tocsection-6">
-              <a href="#Android"><span class="tocnumber">2.3</span> <span class="toctext">Android</span></a>
+              <a href="#Wiki"><span class="tocnumber">3.1</span> <span class="toctext">Wiki</span></a>
             </li>
             <li class="toclevel-2 tocsection-7">
-              <a href="#Server"><span class="tocnumber">2.4</span> <span class="toctext">Server</span></a>
+              <a href="#PC_3"><span class="tocnumber">3.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-8">
-              <a href="#Doc"><span class="tocnumber">2.5</span> <span class="toctext">Doc</span></a>
+              <a href="#Android"><span class="tocnumber">3.3</span> <span class="toctext">Android</span></a>
             </li>
             <li class="toclevel-2 tocsection-9">
-              <a href="#Dev"><span class="tocnumber">2.6</span> <span class="toctext">Dev</span></a>
+              <a href="#Server"><span class="tocnumber">3.4</span> <span class="toctext">Server</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-10">
+              <a href="#Doc"><span class="tocnumber">3.5</span> <span class="toctext">Doc</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-11">
+              <a href="#Dev"><span class="tocnumber">3.6</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
@@ -62,6 +70,41 @@
     </h2>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <p>
+      <b>major.fix</b>
+    </p>
+    <ul>
+      <li>
+        HtmlView: Fix blank pages for wikis downloaded from archive.org. {detected by thombles}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Fallback to wikitext databases if html databases are not present.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        DownloadCentral: Fix Download Central icons for Mac OS X.
+      </li>
+    </ul>
+    <p>
+      <b>dev</b>
+    </p>
+    <ul>
+      <li>
+        Log: Log Download Central progress to troubleshoot failed completions. {detected by William}
+      </li>
+    </ul>
+    <p>
+      <br>
+    </p>
+    <h2>
+      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29_2">v3.6.3.2 (2016-06-20)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major.fix</b>
@@ -98,7 +141,7 @@
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC_2">PC</span>
+      <span class="mw-headline" id="PC_3">PC</span>
     </h3>
     <p>
       <b>major.add</b>
