--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.2/xowa_app_windows_64_v3.6.3.2.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_windows_64_v3.6.3.3.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.2/xowa_app_windows_v3.6.3.2.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_windows_v3.6.3.3.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.2/xowa_app_linux_64_v3.6.3.2.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_linux_64_v3.6.3.3.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.2/xowa_app_linux_v3.6.3.2.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_linux_v3.6.3.3.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.2/xowa_app_macosx_64_v3.6.3.2.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_macosx_64_v3.6.3.3.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.2/xowa_app_macosx_v3.6.3.2.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_macosx_v3.6.3.3.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.2/xowa_app_arm_v3.6.3.2.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_arm_v3.6.3.3.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.6.3.2.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.6.3.3.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -93,6 +93,41 @@
     </h2>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <p>
+      <b>major.fix</b>
+    </p>
+    <ul>
+      <li>
+        HtmlView: Fix blank pages for wikis downloaded from archive.org. {detected by thombles}
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Fallback to wikitext databases if html databases are not present.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        DownloadCentral: Fix Download Central icons for Mac OS X.
+      </li>
+    </ul>
+    <p>
+      <b>dev</b>
+    </p>
+    <ul>
+      <li>
+        Log: Log Download Central progress to troubleshoot failed completions. {detected by William}
+      </li>
+    </ul>
+    <p>
+      <br>
+    </p>
+    <h2>
+      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29_2">v3.6.3.2 (2016-06-20)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major.fix</b>
@@ -129,7 +164,7 @@
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC_2">PC</span>
+      <span class="mw-headline" id="PC_3">PC</span>
     </h3>
     <p>
       <b>major.add</b>
