--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,6 +82,20 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
+      v3.6.3.3 features the following:
+    </p>
+    <ul>
+      <li>
+        (PC) Fix blank pages for wikis downloaded from archive.org
+      </li>
+      <li>
+        (PC) Fix Download Central icons for Mac OS X
+      </li>
+      <li>
+        (PC) Log Download Central progress to troubleshoot failed completions
+      </li>
+    </ul>
+    <p>
       v3.6.3.2 features the following:
     </p>
     <ul>
