--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -6,7 +6,7 @@
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
   <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -21,7 +21,7 @@
 .cell_center {text-align:center;}
 </style>
 <style data-source="xowa" type="text/css">
-.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:150px;}
+.options_row_label   {font-weight:bold; vertical-align:text-top; text-align:right; width:200px;}
   .options_table       {border: 1px solid #AAAAAA; border-collapse: collapse; color: black; margin: 1em 0; background-color: #F9F9F9;}
   .options_table td    {border: 1px solid #AAAAAA; padding: 0.2em;}
   .options_textbox     {padding: 2px; border: 1px solid black;}
@@ -126,10 +126,10 @@
           2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Dump complete
+          Dump in progress
         </td>
         <td class='cell_center'>
           sqlite3
@@ -161,7 +161,7 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -196,7 +196,7 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -231,10 +231,10 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Dump in progress
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -266,7 +266,7 @@
           2016-04-06
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -301,10 +301,10 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -336,7 +336,7 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -371,7 +371,7 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -406,10 +406,10 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-07
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -438,13 +438,13 @@
           n
         </td>
         <td class='cell_center'>
-          2016-04-07
+          2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-07
         </td>
         <td class='cell_center'>
-          Dump in progress
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -470,25 +470,25 @@
           en.wikinews.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
+        </td>
+        <td class='cell_center'>
+          v1
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikinews.org")'>Import</button>
@@ -511,7 +511,7 @@
           2016-06-02
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -540,25 +540,25 @@
           en.wikiquote.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
+        </td>
+        <td class='cell_center'>
+          v1
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikiquote.org")'>Import</button>
@@ -578,13 +578,13 @@
           n
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -610,25 +610,25 @@
           en.wikiversity.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
+        </td>
+        <td class='cell_center'>
+          v1
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("en.wikiversity.org")'>Import</button>
@@ -645,16 +645,16 @@
           en.wikivoyage.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          2016-01-12
+          2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Dump in progress
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -683,13 +683,13 @@
           n
         </td>
         <td class='cell_center'>
-          2016-04-07
+          2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-07
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -721,7 +721,7 @@
           2016-03-05
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -790,7 +790,7 @@
           2014-06-15
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -825,7 +825,7 @@
           2014-06-22
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -860,7 +860,7 @@
           2014-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -895,7 +895,7 @@
           2014-06-15
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -930,7 +930,7 @@
           2014-06-17
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -959,16 +959,16 @@
           simple.wikibooks.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
           2015-10-02
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -1000,10 +1000,10 @@
           2016-06-01
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Dump in progress
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -1029,13 +1029,13 @@
           simple.wikiquote.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
           2016-01-30
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
           Dump complete
@@ -1070,7 +1070,7 @@
           2016-03-05
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -1099,25 +1099,25 @@
           species.wikimedia.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
-          1969-12-31
+          2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-06
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
+          sqlite3
         </td>
         <td class='cell_center'>
           v2
+        </td>
+        <td class='cell_center'>
+          v1
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("species.wikimedia.org")'>Import</button>
@@ -1140,10 +1140,10 @@
           2016-04-07
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-07
         </td>
         <td class='cell_center'>
-          Partial dump
+          Dump complete
         </td>
         <td class='cell_center'>
           sqlite3
@@ -1175,7 +1175,7 @@
           2016-06-02
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-05
         </td>
         <td class='cell_center'>
           Dump complete
@@ -1204,13 +1204,13 @@
           zh.wikipedia.org
         </td>
         <td class='cell_center'>
-          y
+          n
         </td>
         <td class='cell_center'>
           2015-10-03
         </td>
         <td class='cell_center'>
-          2016-03-05
+          2015-08-07
         </td>
         <td class='cell_center'>
           Dump complete
