--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,6 +82,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
+      v3.6.3.4 features the following:
+    </p>
+    <ul>
+      <li>
+        (Server) Fix blank pages for wikis downloaded from archive.org (fixed for GUI in 3.6.3.3, but not for HTTP Server)
+      </li>
+    </ul>
+    <p>
       v3.6.3.3 features the following:
     </p>
     <ul>
