--- a/home/wiki/Change_log/v3.6.3.1.html
+++ b/home/wiki/Change_log/v3.6.3.1.html
@@ -25,48 +25,70 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.6.3.2_.282016-06-20.29"><span class="tocnumber">1</span> <span class="toctext">v3.6.3.2 (2016-06-20)</span></a> 
+          <a href="#v3.6.3.4_.282016-06-22.29"><span class="tocnumber">1</span> <span class="toctext">v3.6.3.4 (2016-06-22)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#PC"><span class="tocnumber">1.1</span> <span class="toctext">PC</span></a>
+              <a href="#Server"><span class="tocnumber">1.1</span> <span class="toctext">Server</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-3">
-          <a href="#v3.6.3.2_.282016-06-20.29_2"><span class="tocnumber">2</span> <span class="toctext">v3.6.3.2 (2016-06-20)</span></a> 
+          <a href="#v3.6.3.3_.282016-06-21.29"><span class="tocnumber">2</span> <span class="toctext">v3.6.3.3 (2016-06-21)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-4">
-              <a href="#PC_2"><span class="tocnumber">2.1</span> <span class="toctext">PC</span></a>
+              <a href="#PC"><span class="tocnumber">2.1</span> <span class="toctext">PC</span></a>
             </li>
           </ul>
         </li>
         <li class="toclevel-1 tocsection-5">
-          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">3</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
+          <a href="#v3.6.3.2_.282016-06-20.29"><span class="tocnumber">3</span> <span class="toctext">v3.6.3.2 (2016-06-20)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-6">
-              <a href="#Wiki"><span class="tocnumber">3.1</span> <span class="toctext">Wiki</span></a>
+              <a href="#PC_2"><span class="tocnumber">3.1</span> <span class="toctext">PC</span></a>
             </li>
-            <li class="toclevel-2 tocsection-7">
-              <a href="#PC_3"><span class="tocnumber">3.2</span> <span class="toctext">PC</span></a>
-            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-7">
+          <a href="#v3.6.3.1_.282016-06-19.29"><span class="tocnumber">4</span> <span class="toctext">v3.6.3.1 (2016-06-19)</span></a> 
+          <ul>
             <li class="toclevel-2 tocsection-8">
-              <a href="#Android"><span class="tocnumber">3.3</span> <span class="toctext">Android</span></a>
+              <a href="#Wiki"><span class="tocnumber">4.1</span> <span class="toctext">Wiki</span></a>
             </li>
             <li class="toclevel-2 tocsection-9">
-              <a href="#Server"><span class="tocnumber">3.4</span> <span class="toctext">Server</span></a>
+              <a href="#PC_3"><span class="tocnumber">4.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-10">
-              <a href="#Doc"><span class="tocnumber">3.5</span> <span class="toctext">Doc</span></a>
+              <a href="#Android"><span class="tocnumber">4.3</span> <span class="toctext">Android</span></a>
             </li>
             <li class="toclevel-2 tocsection-11">
-              <a href="#Dev"><span class="tocnumber">3.6</span> <span class="toctext">Dev</span></a>
+              <a href="#Server_2"><span class="tocnumber">4.4</span> <span class="toctext">Server</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-12">
+              <a href="#Doc"><span class="tocnumber">4.5</span> <span class="toctext">Doc</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-13">
+              <a href="#Dev"><span class="tocnumber">4.6</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
     <h2>
-      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29">v3.6.3.2 (2016-06-20)</span>
+      <span class="mw-headline" id="v3.6.3.4_.282016-06-22.29">v3.6.3.4 (2016-06-22)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="Server">Server</span>
+    </h3>
+    <ul>
+      <li>
+        HTTP Server: Fix blank pages for wikis downloaded from archive.org (fixed for GUI in 3.6.3.3, but not for HTTP Server). {detected by thombles}
+      </li>
+    </ul>
+    <p>
+      <br>
+    </p>
+    <h2>
+      <span class="mw-headline" id="v3.6.3.3_.282016-06-21.29">v3.6.3.3 (2016-06-21)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
@@ -101,7 +123,7 @@
       <br>
     </p>
     <h2>
-      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29_2">v3.6.3.2 (2016-06-20)</span>
+      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29">v3.6.3.2 (2016-06-20)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="PC_2">PC</span>
@@ -330,7 +352,7 @@
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="Server">Server</span>
+      <span class="mw-headline" id="Server_2">Server</span>
     </h3>
     <p>
       <b>major.add</b>
