--- a/home/wiki/Help/Download_XOWA.html
+++ b/home/wiki/Help/Download_XOWA.html
@@ -28,10 +28,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_windows_64_v3.6.3.3.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.4/xowa_app_windows_64_v3.6.3.4.zip" rel="nofollow" class="external text">Windows (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_windows_v3.6.3.3.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.4/xowa_app_windows_v3.6.3.4.zip" rel="nofollow" class="external text">Windows (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -39,10 +39,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_linux_64_v3.6.3.3.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.4/xowa_app_linux_64_v3.6.3.4.zip" rel="nofollow" class="external text">Linux (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_linux_v3.6.3.3.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.4/xowa_app_linux_v3.6.3.4.zip" rel="nofollow" class="external text">Linux (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -50,10 +50,10 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_macosx_64_v3.6.3.3.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.4/xowa_app_macosx_64_v3.6.3.4.zip" rel="nofollow" class="external text">Mac OS X (64-bit)</a>
       </li>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_macosx_v3.6.3.3.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.4/xowa_app_macosx_v3.6.3.4.zip" rel="nofollow" class="external text">Mac OS X (32-bit)</a>
       </li>
     </ul>
     <h2>
@@ -61,7 +61,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.3/xowa_app_arm_v3.6.3.3.zip" rel="nofollow" class="external text">Raspberry Pi</a>
+        <a href="https://github.com/gnosygnu/xowa/releases/download/v3.6.3.4/xowa_app_arm_v3.6.3.4.zip" rel="nofollow" class="external text">Raspberry Pi</a>
       </li>
     </ul>
     <h2>
@@ -77,7 +77,7 @@
     </h2>
     <ul>
       <li>
-        <a href="https://github.com/gnosygnu/xowa/archive/v3.6.3.3.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
+        <a href="https://github.com/gnosygnu/xowa/archive/v3.6.3.4.zip" rel="nofollow" class="external text">Source code (Desktop)</a>
       </li>
     </ul>
     <h2>
@@ -89,7 +89,21 @@
       </li>
     </ul>
     <h2>
-      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29">v3.6.3.2 (2016-06-20)</span>
+      <span class="mw-headline" id="v3.6.3.4_.282016-06-22.29">v3.6.3.4 (2016-06-22)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="Server">Server</span>
+    </h3>
+    <ul>
+      <li>
+        HTTP Server: Fix blank pages for wikis downloaded from archive.org (fixed for GUI in 3.6.3.3, but not for HTTP Server). {detected by thombles}
+      </li>
+    </ul>
+    <p>
+      <br>
+    </p>
+    <h2>
+      <span class="mw-headline" id="v3.6.3.3_.282016-06-21.29">v3.6.3.3 (2016-06-21)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="PC">PC</span>
@@ -124,7 +138,7 @@
       <br>
     </p>
     <h2>
-      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29_2">v3.6.3.2 (2016-06-20)</span>
+      <span class="mw-headline" id="v3.6.3.2_.282016-06-20.29">v3.6.3.2 (2016-06-20)</span>
     </h2>
     <h3>
       <span class="mw-headline" id="PC_2">PC</span>
@@ -353,7 +367,7 @@
       </li>
     </ul>
     <h3>
-      <span class="mw-headline" id="Server">Server</span>
+      <span class="mw-headline" id="Server_2">Server</span>
     </h3>
     <p>
       <b>major.add</b>
