--- a/home/wiki/Options/HTML_databases.html
+++ b/home/wiki/Options/HTML_databases.html
@@ -305,7 +305,7 @@ li.active a, li.active a:hover
               for Read tab: <sup id="cite_ref-read_preferred_0-0" class="reference"><a href="#cite_note-read_preferred-0">[1]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.wiki.hdump.read_preferred" type="checkbox" class="options_checkbox" accesskey='e' id='xowa_prop_0' checked='checked'>
+              <input xowa_prop="xowa.api.wiki.hdump.read_preferred" type="checkbox" class="options_checkbox" accesskey='e' id='xowa_prop_0'>
             </td>
           </tr>
           <tr>
@@ -314,10 +314,10 @@ li.active a, li.active a:hover
             </td>
             <td>
               <select xowa_prop="xowa.api.wiki.hdump.html_mode" xowa_prop_list="xowa.api.wiki.hdump.html_mode_list" size="2" class='options_select' id='xowa_prop_1'>
-                <option value='shown'>
+                <option value='shown' selected='selected'>
                   Shown
                 </option>
-                <option value='hdump_save' selected='selected'>
+                <option value='hdump_save'>
                   Saved for HTML DB
                 </option>
               </select>
