--- a/home/wiki/App/Import/Download_Central.html
+++ b/home/wiki/App/Import/Download_Central.html
@@ -69,6 +69,9 @@
             </li>
           </ul>
         </li>
+        <li class="toclevel-1 tocsection-9">
+          <a href="#Notes"><span class="tocnumber">5</span> <span class="toctext">Notes</span></a>
+        </li>
       </ul>
     </div>
     <h2>
@@ -169,33 +172,33 @@
       <span class="mw-headline" id="Manual_setup">Manual setup</span>
     </h2>
     <p>
-      Some users may not want to use Download Central. For example, users may have an alternate download manager which they prefer. Or they are using the HTTP Server, which currently does not support Download Central.
+      Some users may not want to use Download Central. For example, users may have an alternate download manager which will be faster<sup id="cite_ref-download_managers_0-0" class="reference"><a href="#cite_note-download_managers-0">[1]</a></sup>
     </p>
     <p>
       In these cases, manual setup is still possible in the following way:
     </p>
     <ul>
       <li>
-        Find the archive.org URL for your wiki. These will generally follow the form of <a href="https://archive.org/download/Xowa_(wiki)_latest/" rel="nofollow" class="external free">https://archive.org/download/Xowa_(wiki)_latest/</a> For a list of possible wiki names, see the archive.org links on the <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_3" title="Dashboard/Image databases" class="xowa-visited">Image databases</a> page.
+        Click on the Info button for your download. For example, Simple Wikipedia Articles will take you to home/wiki/Special:XowaDownloadCentralInfo?task_id=1
       </li>
       <li>
-        Download the files for your wiki. These will generally follow the form of "Xowa_(wiki)_(date)_(type).zip". For example, see above for Simple Wikipedia file names.
+        Copy and paste the listed URLs to your download manager.
       </li>
       <li>
-        Unzip the files to <span class='path'>C:\xowa\wiki\simple.wikipedia.org\</span>
+        Unzip the files to the <code>wiki folder</code> listed on the Info page. For example, Simple Wikipedia files will go to <span class='path'>C:\xowa\wiki\simple.wikipedia.org\</span>
       </li>
       <li>
-        For the desktop, just run XOWA. XOWA will automatically pick up the new wiki
+        For the desktop, just restart XOWA. XOWA will automatically pick up the new wiki
       </li>
       <li>
-        For Android, copy the files to your SD Card. See <a href="http://xowa.org/home/wiki/Android/Setup.html" id="xolnki_4" title="Android/Setup" class="xowa-visited">Android Setup</a> for a list of paths.
+        For Android, copy the files to your SD Card. See <a href="http://xowa.org/home/wiki/Android/Setup.html" id="xolnki_3" title="Android/Setup" class="xowa-visited">Android Setup</a> for a list of paths.
       </li>
     </ul>
     <h2>
       <span class="mw-headline" id="Existing_monthly_update_users_of_the_English_Wikipedia_v2b_images">Existing monthly update users of the English Wikipedia v2b images</span>
     </h2>
     <p>
-      This section only applies to users who have been manually downloading the monthly updates for English Wikipedia
+      This section only applies to users who have been manually downloading the monthly updates for English Wikipedia.
     </p>
     <h3>
       <span class="mw-headline" id="No_need_to_redownload_the_images_in_Download_Central">No need to redownload the images in Download Central</span>
@@ -293,8 +296,16 @@
       For next month (and future months), you should download the monthly update through Download Central. There will be a new task called "English Wikipedia - Image Update (2016-07)". You will just need to download this item, and you'll be up-to-date.
     </p>
     <p>
-      Of course, you will still be able to download them manually from archive.org. But as shown by the section above, this can be quite complicated.
+      Of course, you will still be able to download them manually from archive.org. But as shown by the section above, this can be quite laborious.
     </p>
+    <h2>
+      <span class="mw-headline" id="Notes">Notes</span>
+    </h2>
+    <ol class="references">
+      <li id="cite_note-download_managers-0">
+        <span class="mw-cite-backlink"><a href="#cite_ref-download_managers_0-0">^</a></span> <span class="reference-text">Most download managers will have various tricks to speed up downloads. For example, they can open up multiple connections to a server and download the file in pieces. In contrast, XOWA only opens one connection and downloads. For more technical info, see: <a href="http://stackoverflow.com/questions/21981690/why-do-download-managers-work-faster-than-the-default-browser-downloaders" rel="nofollow" class="external free">http://stackoverflow.com/questions/21981690/why-do-download-managers-work-faster-than-the-default-browser-downloaders</a></span>
+      </li>
+    </ol>
   
     </div>
   </div>
