--- a/home/wiki/Change_log/v3.6.4.1.html
+++ b/home/wiki/Change_log/v3.6.4.1.html
@@ -25,27 +25,80 @@
       </div>
       <ul>
         <li class="toclevel-1 tocsection-1">
-          <a href="#v3.6.4.1_.282016-06-25.29"><span class="tocnumber">1</span> <span class="toctext">v3.6.4.1 (2016-06-25)</span></a> 
+          <a href="#v3.6.4.2_.282016-06-27.29"><span class="tocnumber">1</span> <span class="toctext">v3.6.4.2 (2016-06-27)</span></a> 
           <ul>
             <li class="toclevel-2 tocsection-2">
-              <a href="#Wiki"><span class="tocnumber">1.1</span> <span class="toctext">Wiki</span></a>
+              <a href="#PC"><span class="tocnumber">1.1</span> <span class="toctext">PC</span></a>
             </li>
-            <li class="toclevel-2 tocsection-3">
-              <a href="#PC"><span class="tocnumber">1.2</span> <span class="toctext">PC</span></a>
-            </li>
+          </ul>
+        </li>
+        <li class="toclevel-1 tocsection-3">
+          <a href="#v3.6.4.1_.282016-06-25.29"><span class="tocnumber">2</span> <span class="toctext">v3.6.4.1 (2016-06-25)</span></a> 
+          <ul>
             <li class="toclevel-2 tocsection-4">
-              <a href="#Server"><span class="tocnumber">1.3</span> <span class="toctext">Server</span></a>
+              <a href="#Wiki"><span class="tocnumber">2.1</span> <span class="toctext">Wiki</span></a>
             </li>
             <li class="toclevel-2 tocsection-5">
-              <a href="#Android"><span class="tocnumber">1.4</span> <span class="toctext">Android</span></a>
+              <a href="#PC_2"><span class="tocnumber">2.2</span> <span class="toctext">PC</span></a>
             </li>
             <li class="toclevel-2 tocsection-6">
-              <a href="#Dev"><span class="tocnumber">1.5</span> <span class="toctext">Dev</span></a>
+              <a href="#Server"><span class="tocnumber">2.3</span> <span class="toctext">Server</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-7">
+              <a href="#Android"><span class="tocnumber">2.4</span> <span class="toctext">Android</span></a>
+            </li>
+            <li class="toclevel-2 tocsection-8">
+              <a href="#Dev"><span class="tocnumber">2.5</span> <span class="toctext">Dev</span></a>
             </li>
           </ul>
         </li>
       </ul>
     </div>
+    <h2>
+      <span class="mw-headline" id="v3.6.4.2_.282016-06-27.29">v3.6.4.2 (2016-06-27)</span>
+    </h2>
+    <h3>
+      <span class="mw-headline" id="PC">PC</span>
+    </h3>
+    <p>
+      <b>major</b>
+    </p>
+    <ul>
+      <li>
+        DownloadCentral: Fix Images failing b/c Articles already creates image databases.
+      </li>
+    </ul>
+    <dl>
+      <dd>
+        <span style='font-variant:small-caps'>Resolved by</span>: Release fsdb connections after registering new wiki.
+      </dd>
+    </dl>
+    <ul>
+      <li>
+        DownloadCentral: Add new wiki to left-hand sidebar of wikis.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        DownloadCentral: Sort work tasks by add-order after reloading page.
+      </li>
+    </ul>
+    <p>
+      <b>minor</b>
+    </p>
+    <ul>
+      <li>
+        DownloadCentral: Make minor HTML changes to DownloadInfo, including removing ellipsis and adding URL for wiki.
+      </li>
+    </ul>
+    <ul>
+      <li>
+        HTML: Remove ellipsis from Wiki Info.
+      </li>
+    </ul>
+    <p>
+      <br>
+    </p>
     <h2>
       <span class="mw-headline" id="v3.6.4.1_.282016-06-25.29">v3.6.4.1 (2016-06-25)</span>
     </h2>
@@ -63,7 +116,7 @@
       </dd>
     </dl>
     <h3>
-      <span class="mw-headline" id="PC">PC</span>
+      <span class="mw-headline" id="PC_2">PC</span>
     </h3>
     <p>
       <b>major</b>
