--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -82,6 +82,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
+      v3.6.4.2 features the following:
+    </p>
+    <ul>
+      <li>
+        (PC) Fix Download Central failing on last step of image import
+      </li>
+    </ul>
+    <p>
       v3.6.4.1 features the following:
     </p>
     <ul>
