--- a/home/wiki/Options/HTML_databases.html
+++ b/home/wiki/Options/HTML_databases.html
@@ -305,7 +305,7 @@ li.active a, li.active a:hover
               for Read tab: <sup id="cite_ref-read_preferred_0-0" class="reference"><a href="#cite_note-read_preferred-0">[1]</a></sup>
             </td>
             <td>
-              <input xowa_prop="xowa.api.wiki.hdump.read_preferred" type="checkbox" class="options_checkbox" accesskey='e' id='xowa_prop_0'>
+              <input xowa_prop="xowa.api.wiki.hdump.read_preferred" type="checkbox" class="options_checkbox" accesskey='e' id='xowa_prop_0' checked='checked'>
             </td>
           </tr>
           <tr>
