--- a/home/wiki/Options/Files.html
+++ b/home/wiki/Options/Files.html
@@ -360,8 +360,8 @@ li.active a, li.active a:hover
             <td>
 <textarea xowa_prop="xowa.api.usr.cache.info" class="options_textbox options_readonly" readonly='readonly' style="width: 600px; height: 100px;" id='xowa_prop_3'>
 cache folder: C:\xowa\file
-space used: 851.826 KB
-file count: 70
+space used: 1.284 MB
+file count: 95
 oldest file: 2016-06-24 21:06:51
 </textarea>
             </td>
